<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/last_sent"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/last_sent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/last_sent_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/last_sent_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/last_sent_n"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sent_messages_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sent_messages_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/sent_messages_count"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/msg_count_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/msg_count_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/send_message_n"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/received_messages_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/received_messages_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/received_messaged_count"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/msg_rec_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/msg_rec_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rec_n"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/collect"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/collect"
        app:backgroundTint="#673AB7"

    />

    <Button
        android:id="@+id/send"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:onClick="SendMessage"
        android:text="@string/send"
        app:backgroundTint="#096AB6"
        app:layout_constraintBottom_toTopOf="@+id/collect" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/you_done"
            />

        <TextView
            android:id="@+id/textview_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:text="@string/logout_here"
            android:paddingStart="10dp" />

    </LinearLayout>

</LinearLayout>